@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-10T00:44:15Z",
+  "timestamp" : "2022-05-11T08:13:36Z",
   "count_outdated" : 8,
   "uniques_outdated" : 2,
-  "count" : 227,
-  "uniques" : 11,
+  "count" : 230,
+  "uniques" : 12,
   "views" : [
     {
       "timestamp": "2022-04-29T00:00:00Z",
@@ -67,6 +67,13 @@
       "count_minmax": [ 0, 28 ],
       "uniques": 1,
       "uniques_minmax": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2022-05-11T00:00:00Z",
+      "count": 3,
+      "count_minmax": [ 3, 3 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
